# llm-chatbot

./: .env  01_simple_graph.ipynb  02_graph_with_conditions.ipynb  03_chatbot.ipynb  main.py  pyproject.toml  requirements.txt
app/: embedder.py  interface.py  loader.py  model.py  rag_chain.py
