[project]
name = "langraph-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.4.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.67",
    "langchain-google-genai>=2.1.6",
    "langchain-google-vertexai>=2.0.27",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.0",
    "notebook>=7.4.4",
    "openai>=1.93.0",
    "python-dotenv>=1.1.1",
]
